--- a/JadwalMe/Views/Home/Buku.cshtml
+++ b/JadwalMe/Views/Home/Buku.cshtml
@@ -43,17 +43,17 @@
                                 <div class="row mb-2">
                                     <div class="col-4">
                                         <a href="">
-                                            <img class="rounded" src="~/img/default.png" width="100px" height="150px" alt="">
+                                            <img class="rounded" src="~/img/buku1.jpg" width="100px" height="150px" alt="">
                                         </a>
                                     </div>
                                     <div class="col-8 text-dark">
                                         <div class="row  d-flex justify-content-start p-3">
-                                                <a href="#" class="text-dark mt-2 mb-2">KIMIA : The Big Three</a>
+                                                <a href="#" class="text-dark mt-2 mb-2">Sebuah Seni Untuk Bersikap Bodo Amat</a>
                                                 
                                                 <p class="text-macolor mb-2" style="font-size: 9pt;">
-                                                    Pengarang : Zulia Amalia <br>
-                                                    Penerbit : Naufal Hanif <br>
-                                                    Rp. 24.000 <br>
+                                                    Pengarang : Mark Manson <br>
+                                                    Penerbit : Grasindo <br>
+                                                    Rp. 88.000 <br>
                                                     1821 Jumlah Pembeli <br>
                                                 </p>
                                          </div>
@@ -62,17 +62,17 @@
                                 <div class="row mb-2">
                                     <div class="col-4">
                                         <a href="">
-                                            <img class="rounded" src="~/img/default.png" width="100px" height="150px" alt="">
+                                            <img class="rounded" src="~/img/buku2.jpg" width="100px" height="150px" alt="">
                                         </a>
                                     </div>
                                     <div class="col-8 text-dark">
                                         <div class="row  d-flex justify-content-start p-3">
-                                                <a href="#" class="text-dark mt-2 mb-2">KIMIA : The Big Three</a>
+                                                <a href="#" class="text-dark mt-2 mb-2">Dasar-Dasar Teknik Informatika</a>
                                                 
                                                 <p class="text-macolor mb-2" style="font-size: 9pt;">
-                                                    Pengarang : Zulia Amalia <br>
-                                                    Penerbit : Naufal Hanif <br>
-                                                    Rp. 24.000 <br>
+                                                    Pengarang : Novega Pratama Adipura <br>
+                                                    Penerbit : Deepublish <br>
+                                                    Rp. 86.000 <br>
                                                     1821 Jumlah Pembeli <br>
                                                 </p>
                                          </div>
@@ -81,17 +81,17 @@
                                 <div class="row mb-2">
                                     <div class="col-4">
                                         <a href="">
-                                            <img class="rounded" src="~/img/default.png" width="100px" height="150px" alt="">
+                                            <img class="rounded" src="~/img/beranda1.jpg" width="100px" height="150px" alt="">
                                         </a>
                                     </div>
                                     <div class="col-8 text-dark">
                                         <div class="row  d-flex justify-content-start p-3">
-                                                <a href="#" class="text-dark mt-2 mb-2">KIMIA : The Big Three</a>
+                                                <a href="#" class="text-dark mt-2 mb-2">Lessons In Chesmistry</a>
                                                 
                                                 <p class="text-macolor mb-2" style="font-size: 9pt;">
-                                                    Pengarang : Zulia Amalia <br>
-                                                    Penerbit : Naufal Hanif <br>
-                                                    Rp. 24.000 <br>
+                                                    Pengarang : Bonnie Garmus <br>
+                                                    Penerbit : Random House USA Inc <br>
+                                                    Rp. 288.000 <br>
                                                     1821 Jumlah Pembeli <br>
                                                 </p>
                                          </div>
@@ -156,57 +156,57 @@
                                     <div class="card" style="width: 13rem;">
                                       <div class="card-body">
                                           <a href="" class="d-flex justify-content-between">
-                                            <img class="rounded" src="~/img/default.png" width="80px" height="120px" alt="">
-                                            <img class="rounded" src="~/img/default.png" width="80px" height="120px" alt="">
+                                            <img class="rounded" src="~/img/buku3.jpg" width="80px" height="120px" alt="">
+                                            <img class="rounded" src="~/img/buku4.png" width="80px" height="120px" alt="">
                                         </a>
                                         </div>
                                         <div class="card-body">
                                             <a href="#">
-                                                <h6 class="font-weight-bold text-dark">Seni Hidup Sederhana Untuk Puncak Kebahagian</h6>
+                                                <h6 class="font-weight-bold text-dark">Matahari Minor</h6>
                                             </a>
-                                            <p class="text-macolor" style="font-size: 9pt;">Rp. 120.000</p>
+                                            <p class="text-macolor" style="font-size: 9pt;">Rp. 89.999</p>
                                         </div>
                                     </div>
                                     <div class="card" style="width: 13rem;">
                                       <div class="card-body">
                                           <a href="" class="d-flex justify-content-between">
-                                        <img class="rounded" src="~/img/default.png" width="80px" height="120px" alt="">
-                                        <img class="rounded" src="~/img/default.png" width="80px" height="120px" alt="">
+                                        <img class="rounded" src="~/img/buku5.jpg" width="80px" height="120px" alt="">
+                                        <img class="rounded" src="~/img/buku6.jpg" width="80px" height="120px" alt="">
                                         </a>
                                         </div>
                                         <div class="card-body">
                                             <a href="#">
-                                                <h6 class="font-weight-bold text-dark">Seni Hidup Sederhana Untuk Puncak Kebahagian</h6>
+                                                <h6 class="font-weight-bold text-dark">Teknologi Untuk Masa Depan</h6>
                                             </a>
-                                            <p class="text-macolor" style="font-size: 9pt;">Rp. 43.000</p>
+                                            <p class="text-macolor" style="font-size: 9pt;">Rp. 84.999</p>
                                         </div>
                                     </div>
                                     <div class="card" style="width: 13rem;">
                                       <div class="card-body">
                                           <a href="" class="d-flex justify-content-between">
-                                        <img class="rounded" src="~/img/default.png" width="80px" height="120px" alt="">
-                                        <img class="rounded" src="~/img/default.png" width="80px" height="120px" alt="">
+                                        <img class="rounded" src="~/img/buku7.jpg" width="80px" height="120px" alt="">
+                                        <img class="rounded" src="~/img/buku8.jpg" width="80px" height="120px" alt="">
                                         </a>
                                         </div>
                                         <div class="card-body">
                                             <a href="#">
-                                                <h6 class="font-weight-bold text-dark">Seni Hidup Sederhana Untuk Puncak Kebahagian</h6>
+                                                <h6 class="font-weight-bold text-dark">Breath : Cara Bernapas Dengan Benar</h6>
                                             </a>
-                                            <p class="text-macolor" style="font-size: 9pt;">Rp. 21.000</p>
+                                            <p class="text-macolor" style="font-size: 9pt;">Rp. 113.999</p>
                                         </div>
                                     </div>
                                     <div class="card" style="width: 13rem;">
                                       <div class="card-body">
                                           <a href="" class="d-flex justify-content-between">
-                                        <img class="rounded" src="~/img/default.png" width="80px" height="120px" alt="">
-                                        <img class="rounded" src="~/img/default.png" width="80px" height="120px" alt="">
+                                        <img class="rounded" src="~/img/buku9.jpg" width="80px" height="120px" alt="">
+                                        <img class="rounded" src="~/img/buku10.jpg" width="80px" height="120px" alt="">
                                         </a>
                                         </div>
                                         <div class="card-body">
                                             <a href="#">
-                                                <h6 class="font-weight-bold text-dark">Seni Hidup Sederhana Untuk Puncak Kebahagian</h6>
+                                                <h6 class="font-weight-bold text-dark">Secret Of Divine Love</h6>
                                             </a>
-                                            <p class="text-macolor" style="font-size: 9pt;">Rp. 34.000</p>
+                                            <p class="text-macolor" style="font-size: 9pt;">Rp. 159.999</p>
                                         </div>
                                     </div>
                                 </div>
