add bigpost content

--- a/JadwalMe/Views/Home/Beranda.cshtml
+++ b/JadwalMe/Views/Home/Beranda.cshtml
@@ -8,7 +8,7 @@
             <div class="col">
                 <div class="container-bigpost">
                     <a href="#">
-                        <img class="bigpost mb-4" src="~/img/default.png" alt="">
+                        <img class="bigpost mb-4" src="~/img/picky.jpg" alt="">
                         <div class="desk-bigpost">
                             <h3 class="text-white font-weight-bold">Aturan Yang Selalu Ada Dalam <br> Buku Sigma Male</h3>
                         </div>
@@ -34,7 +34,7 @@
                                         <img class="rounded" src="~/img/beranda4.jpg" width="100px" height="150px" alt="">
                                     </a>
                                     <a href="">
-                                        <img class="rounded" src="~/img/default.png" width="100px" height="150px" alt="">
+                                        <img class="rounded" src="~/img/menanti.jpg" width="100px" height="150px" alt="">
                                     </a>
                                 </div>
                             </div>
