--- a/JadwalMe/Views/Home/Blog.cshtml
+++ b/JadwalMe/Views/Home/Blog.cshtml
@@ -25,7 +25,7 @@
                 </div>
                 <div class="container-bigpost">
                     <a href="#">
-                        <img class="bigpost" src="~/img/default.png" alt="">
+                        <img class="bigpost" src="~/img/picky.jpg" alt="">
                         <div class="desk-bigpost">
                             <h3 class="text-white font-weight-bold">Aturan Yang Selalu Ada Dalam <br> Buku Sigma Male</h3>
                         </div>
