--- a/JadwalMe/Views/Home/Buku.cshtml
+++ b/JadwalMe/Views/Home/Buku.cshtml
@@ -25,9 +25,9 @@
                 </div>
                 <div class="container-bigpost">
                     <a href="#">
-                        <img class="bigpost" src="~/img/default.png" alt="">
+                        <img class="bigpost" src="~/img/bukuselfimpro.jpeg" alt="">
                         <div class="desk-bigpost">
-                            <h3 class="text-white font-weight-bold">Aturan Yang Selalu Ada Dalam <br> Buku Sigma Male</h3>
+                            <h3 class="text-white font-weight-bold">Daftar Buku Pengembangan Diri Yang Wajib Dibaca</h3>
                         </div>
                     </a>
                 </div>
@@ -48,8 +48,7 @@
                                     </div>
                                     <div class="col-8 text-dark">
                                         <div class="row  d-flex justify-content-start p-3">
-                                                <a href="#" class="text-dark mt-2 mb-2">Sebuah Seni Untuk Bersikap Bodo Amat</a>
-                                                
+                                                <a href="#" class="text-dark">Sebuah Seni Untuk Bersikap Bodo Amat</a>
                                                 <p class="text-macolor mb-2" style="font-size: 9pt;">
                                                     Pengarang : Mark Manson <br>
                                                     Penerbit : Grasindo <br>
@@ -59,7 +58,7 @@
                                          </div>
                                     </div>
                                 </div>
-                                <div class="row mb-2">
+                                <div class="row mb-2" style="border: 5px;">
                                     <div class="col-4">
                                         <a href="">
                                             <img class="rounded" src="~/img/buku2.jpg" width="100px" height="150px" alt="">
@@ -67,8 +66,7 @@
                                     </div>
                                     <div class="col-8 text-dark">
                                         <div class="row  d-flex justify-content-start p-3">
-                                                <a href="#" class="text-dark mt-2 mb-2">Dasar-Dasar Teknik Informatika</a>
-                                                
+                                                <a href="#" class="text-dark">Dasar-Dasar Teknik Informatika</a>
                                                 <p class="text-macolor mb-2" style="font-size: 9pt;">
                                                     Pengarang : Novega Pratama Adipura <br>
                                                     Penerbit : Deepublish <br>
@@ -86,8 +84,7 @@
                                     </div>
                                     <div class="col-8 text-dark">
                                         <div class="row  d-flex justify-content-start p-3">
-                                                <a href="#" class="text-dark mt-2 mb-2">Lessons In Chesmistry</a>
-                                                
+                                                <a href="#" class="text-dark">Lessons In Chesmistry</a>
                                                 <p class="text-macolor mb-2" style="font-size: 9pt;">
                                                     Pengarang : Bonnie Garmus <br>
                                                     Penerbit : Random House USA Inc <br>
