--- a/JadwalMe/Views/Shared/_Layout.cshtml
+++ b/JadwalMe/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-macolor border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Beranda">
-                    Logo
+                    <img class="iconsvg" src="~/img/logo.png" alt=" " style="width: 150px;" />
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
